Update windows.env.md